Closed Bug 577457 Opened 15 years ago Closed 15 years ago

warning: comparison between signed and unsigned integer expressions in ObjectWrapperChild::AnswerNewEnumerateNext

Categories

(Core :: IPC, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED

People

(Reporter: timeless, Assigned: timeless)

Details

Attachments

(1 file)

js/ipc/ObjectWrapperChild.cpp: In member function ‘virtual bool mozilla::jsipc::ObjectWrapperChild::AnswerNewEnumerateNext(const mozilla::jsipc::JSVariant&, mozilla::jsipc::OperationStatus*, mozilla::jsipc::JSVariant*, nsString*)’: 509: warning: comparison between signed and unsigned integer expressions
Attached patch patchSplinter Review
Assignee: nobody → timeless
Status: NEW → ASSIGNED
Attachment #456424 - Flags: review?(jones.chris.g)
Attachment #456424 - Flags: review?(jones.chris.g) → review+
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: