Bug 577457 warning: comparison between signed and unsigned integer expressions in ObjectWrapperChild::AnswerNewEnumerateNext r=cjones