js/ipc/ObjectWrapperChild.cpp
@@ -505,7 +505,7 @@ ObjectWrapperChild::AnswerNewEnumerateNext(const JSVariant& in_state,
     NS_ASSERTION(i >= 0, "Index of next jsid negative?");
     NS_ASSERTION(i <= strIds->Length(), "Index of next jsid too large?");
 
-    if (i == strIds->Length()) {
+    if (jsuint(i) == strIds->Length()) {
         *status = JS_TRUE;
         return JSObject_to_JSVariant(cx, NULL, statep);
     }
